--- a/elk_setup/docker-compose.yaml
+++ b/elk_setup/docker-compose.yaml
@@ -90,6 +90,8 @@ services:
     environment:
       - node.name=es
       - ELASTIC_PASSWORD=${ELASTIC_PASSWORD}
+      - cluster.name=test
+      - cluster.initial_master_nodes=es
       - bootstrap.memory_lock=true
       - xpack.security.enabled=true
       - xpack.security.http.ssl.enabled=true
@@ -128,7 +130,7 @@ services:
       - certs:/usr/share/kibana/config/certs
       - kibanadata:/usr/share/kibana/data
     ports:
-       ${KIBANA_PORT}:5601
+      - ${KIBANA_PORT}:5601
     environment:
       - SERVERNAME=kibana
       - ELASTICSEARCH_HOSTS=https://es:9200
