--- a/elk_setup/logstash.conf
+++ b/elk_setup/logstash.conf
@@ -12,7 +12,7 @@ output {
     index => "logstash-%{+YYYY.MM.dd}"
     hosts => ["https://es:9200"]
     user => "elastic"
-    password => "<password>"
+    password => "password"
     ssl_enabled => true
     cacert => "/usr/share/logstash/certs/ca/ca.crt"
   }
